dnl Process this file with autoconf to produce a configure script.
AC_INIT(ucon64gui.c)
dnl AM_CONFIG_HEADER(config.h)

dnl AM_INIT_AUTOMAKE(ucon64gui, 0.1.0)


dnl AM_MAINTAINER_MODE

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_ISC_POSIX
AC_STDC_HEADERS
AC_ARG_PROGRAM

CFLAGS="-I. -I./html2gui/ -Wall -O3 \`gtk-config --cflags\`"
LDFLAGS="-s \`gtk-config --cflags --libs\`"

dnl sdl-config --cflags --libs

dnl reasonable guesses for where stuff is installed
if test "x$prefix" = "xNONE"; then
  prefix="/usr/local"
else
  prefix=$prefix
fi

dnl AM_PATH_GTK(1.2.0,,AC_MSG_ERROR(GTK+ >= 1.2.0 not installed.))
 
dnl Checks for libraries.
dnl Replace `main' with a function in -libs:
AC_CHECK_LIB(ibs, main)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(limits.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_UID_T
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_CHECK_FUNCS(getcwd mkdir rmdir socket strcspn strspn strstr strtol)

AC_OUTPUT(Makefile config.h)

echo
echo NOTE: On non-Linux systems you might need to use gmake instead of make
